--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-streamlit
-openai
-python-dotenv
-backoff
-pydantic
+# Core dependencies
+streamlit>=1.29.0  # Web interface
+openai>=1.6.1      # OpenAI API client
+pydantic>=2.5.3    # Data validation
+
+# API and networking
+requests>=2.31.0   # HTTP client
+backoff>=2.2.1     # API retry handling
+python-dotenv>=1.0.0  # Environment variables
+
+# NLP and ML
+sentence-transformers>=2.2.2  # Text embeddings
+scikit-learn>=1.3.2          # Machine learning utilities
+numpy>=1.26.3                # Numerical computations
+
+# Data handling
+pandas>=2.1.4      # Data manipulation
+json5>=0.9.14      # JSON parsing
+
+# Type hints and development
+typing-extensions>=4.9.0  # Type hinting
+mypy>=1.8.0              # Static type checking
+
+# Optional dependencies
+tqdm>=4.66.1       # Progress bars
+colorama>=0.4.6    # Colored terminal output
